fix: Layout Section spacing

--- a/packages/core/src/components/sections/Newsletter/section.module.scss
+++ b/packages/core/src/components/sections/Newsletter/section.module.scss
@@ -1,5 +1,5 @@
 .section {
-  padding-bottom: 0;
+  margin-bottom: 0;
 
   @import "@faststore/ui/src/components/atoms/Button/styles.scss";
   @import "@faststore/ui/src/components/atoms/Icon/styles.scss";
